--- a/config/settings.json
+++ b/config/settings.json
@@ -1,7 +1,11 @@
 {
   "development": {
     "ga_account": "",
-    "nexus_url": "http://nexus.pro",
+    "mvn_repo_1": "http://192.168.0.19:8081/artifactory",
+    "mvn_repo_1_type": "artifactory",
+    "mvn_repo_1_user": "admin",
+    "mvn_repo_1_password": "password",
+    "mvn_repo_1_schedule": "",
     "bitbucket_secret": "yYdshg5ndaCdkdvJMvkJAwAajjJWg8HZ",
     "bitbucket_token": "HgSkE62pTT3HmxFGAm",
     "cocoapods_spec_git": "https://github.com/CocoaPods/Specs.git",
@@ -52,7 +56,11 @@
   },
   "test": {
     "ga_account": "",
-    "nexus_url": "http://nexus.pro",
+    "mvn_repo_1": "http://192.168.0.19:8081/artifactory",
+    "mvn_repo_1_type": "artifactory",
+    "mvn_repo_1_user": "admin",
+    "mvn_repo_1_password": "password",
+    "mvn_repo_1_schedule": "",
     "bitbucket_secret": "yYdshg5ndaCdkdvJMvkJAwAajjJWg8HZ",
     "bitbucket_token": "HgSkE62pTT3HmxFGAm",
     "bitbucket_username": "versioneye_test",
@@ -104,7 +112,11 @@
   },
   "production": {
     "ga_account": "UA-32702672-1",
-    "nexus_url": "http://nexus.pro",
+    "mvn_repo_1": "http://192.168.0.19:8081/artifactory",
+    "mvn_repo_1_type": "artifactory",
+    "mvn_repo_1_user": "admin",
+    "mvn_repo_1_password": "password",
+    "mvn_repo_1_schedule": "",
     "bitbucket_secret": "env_BITBUCKET_SECRET",
     "bitbucket_token": "env_BITBUCKET_TOKEN",
     "cocoapods_spec_git": "https://github.com/CocoaPods/Specs.git",
@@ -155,7 +167,11 @@
   "enterprise": {
     "ga_account": "",
     "projects_unlimited": true,
-    "nexus_url": "http://nexus.pro",
+    "mvn_repo_1": "http://192.168.0.19:8081/artifactory",
+    "mvn_repo_1_type": "artifactory",
+    "mvn_repo_1_user": "admin",
+    "mvn_repo_1_password": "password",
+    "mvn_repo_1_schedule": "",
     "server_url": "http://localhost:3000",
     "server_host": "localhost",
     "server_port": 3000,
