--- a/config/settings.json
+++ b/config/settings.json
@@ -8,6 +8,9 @@
     "mvn_repo_1_schedule": "",
     "bitbucket_secret": "yYdshg5ndaCdkdvJMvkJAwAajjJWg8HZ",
     "bitbucket_token": "HgSkE62pTT3HmxFGAm",
+    "stash_base_url": "http://192.168.0.44:7990",
+    "stash_consumer_key": "",
+    "stash_private_rsa": "",
     "cocoapods_spec_git": "https://github.com/CocoaPods/Specs.git",
     "cocoapods_spec_url": "https://github.com/CocoaPods/Specs",
     "cocoapods_spec": "~/cocoapods/cocoapods-specs",
@@ -65,6 +68,9 @@
     "bitbucket_token": "HgSkE62pTT3HmxFGAm",
     "bitbucket_username": "versioneye_test",
     "bitbucket_password": "qwerty12345",
+    "stash_base_url": "http://192.168.0.44:7990",
+    "stash_consumer_key": "",
+    "stash_private_rsa": "",
     "cocoapods_spec_git": "https://github.com/CocoaPods/Specs.git",
     "cocoapods_spec_url": "https://github.com/CocoaPods/Specs",
     "cocoapods_spec": "/home/versioneye/cocoapods/cocoapods-specs",
@@ -119,6 +125,9 @@
     "mvn_repo_1_schedule": "",
     "bitbucket_secret": "env_BITBUCKET_SECRET",
     "bitbucket_token": "env_BITBUCKET_TOKEN",
+    "stash_base_url": "http://192.168.0.44:7990",
+    "stash_consumer_key": "",
+    "stash_private_rsa": "",
     "cocoapods_spec_git": "https://github.com/CocoaPods/Specs.git",
     "cocoapods_spec_url": "https://github.com/CocoaPods/Specs",
     "cocoapods_spec": "env_COCOAPODS_SPEC",
@@ -208,6 +217,9 @@
     "github_user": "env_GITHUB_USER",
     "bitbucket_secret": "env_BITBUCKET_SECRET",
     "bitbucket_token": "env_BITBUCKET_TOKEN",
+    "stash_base_url": "http://192.168.0.44:7990",
+    "stash_consumer_key": "",
+    "stash_private_rsa": "",
     "cocoapods_spec_git": "https://github.com/CocoaPods/Specs.git",
     "cocoapods_spec_url": "https://github.com/CocoaPods/Specs",
     "cocoapods_spec": "/mnt/cocoapods/cocoapods-specs",
