--- a/config/settings.json
+++ b/config/settings.json
@@ -55,7 +55,8 @@
     "aws_use_ssl": false,
     "aws_access_key_id": "aws_bullshit_bingo_access_key",
     "aws_secret_access_key": "aws_bullshit_bingo_secret",
-    "max_dep_update": "60"
+    "max_dep_update": "60",
+    "show_promocode": true
   },
   "test": {
     "ga_account": "",
@@ -114,7 +115,8 @@
     "aws_use_ssl": false,
     "aws_access_key_id": "aws_bullshit_bingo_access_key",
     "aws_secret_access_key": "aws_bullshit_bingo_secret",
-    "max_dep_update": "60"
+    "max_dep_update": "60",
+    "show_promocode": true
   },
   "production": {
     "ga_account": "UA-32702672-1",
@@ -171,7 +173,8 @@
     "aws_use_ssl": true,
     "aws_access_key_id": "env_AWS_S3_ACCESS_KEY_ID",
     "aws_secret_access_key": "env_AWS_S3_SECRET_ACCESS_KEY",
-    "max_dep_update": "60"
+    "max_dep_update": "60",
+    "show_promocode": true
   },
   "enterprise": {
     "ga_account": "",
@@ -224,6 +227,7 @@
     "cocoapods_spec_url": "https://github.com/CocoaPods/Specs",
     "cocoapods_spec": "/mnt/cocoapods/cocoapods-specs",
     "references_live_update": true,
-    "max_dep_update": "60"
+    "max_dep_update": "60",
+    "show_promocode": false
   }
 }
