Make bitbucket configurable

--- a/config/settings.json
+++ b/config/settings.json
@@ -6,6 +6,7 @@
     "mvn_repo_1_user": "admin",
     "mvn_repo_1_password": "password",
     "mvn_repo_1_schedule": "",
+    "bitbucket_base_url": "https://bitbucket.org",
     "bitbucket_secret": "yYdshg5ndaCdkdvJMvkJAwAajjJWg8HZ",
     "bitbucket_token": "HgSkE62pTT3HmxFGAm",
     "stash_base_url": "http://192.168.0.44:7990",
@@ -65,6 +66,7 @@
     "mvn_repo_1_user": "admin",
     "mvn_repo_1_password": "password",
     "mvn_repo_1_schedule": "",
+    "bitbucket_base_url": "https://bitbucket.org",
     "bitbucket_secret": "yYdshg5ndaCdkdvJMvkJAwAajjJWg8HZ",
     "bitbucket_token": "HgSkE62pTT3HmxFGAm",
     "bitbucket_username": "versioneye_test",
@@ -125,6 +127,7 @@
     "mvn_repo_1_user": "admin",
     "mvn_repo_1_password": "password",
     "mvn_repo_1_schedule": "",
+    "bitbucket_base_url": "https://bitbucket.org",
     "bitbucket_secret": "env_BITBUCKET_SECRET",
     "bitbucket_token": "env_BITBUCKET_TOKEN",
     "stash_base_url": "http://192.168.0.44:7990",
@@ -218,6 +221,7 @@
     "github_client_secret": "env_GITHUB_CLIENT_SECRET",
     "github_pass": "env_GITHUB_PASS",
     "github_user": "env_GITHUB_USER",
+    "bitbucket_base_url": "https://bitbucket.org",
     "bitbucket_secret": "env_BITBUCKET_SECRET",
     "bitbucket_token": "env_BITBUCKET_TOKEN",
     "stash_base_url": "http://192.168.0.44:7990",
