Fix Rabbit for Enterprise

--- a/config/settings.json
+++ b/config/settings.json
@@ -200,8 +200,8 @@
     "elasticsearch_user_index": "/user_enterprise",
     "elasticsearch_addr": "env_ES_PORT_9200_TCP_ADDR",
     "elasticsearch_port": "env_ES_PORT_9200_TCP_PORT",
-    "rabbitmq_addr": "172.16.22.130",
-    "rabbitmq_port": "5672",
+    "rabbitmq_addr": "env_RM_PORT_5672_TCP_ADDR",
+    "rabbitmq_port": "env_RM_PORT_5672_TCP_PORT",
     "memcache_username": null,
     "memcache_password": null,
     "memcache_addr": "env_MC_PORT_11211_TCP_ADDR",
