Adapt ES settings for Docker container.

--- a/config/settings.json
+++ b/config/settings.json
@@ -208,8 +208,8 @@
     "smtp_password": "env_SMTP_PASS",
     "smtp_sender_name": "VersionEye",
     "smtp_sender_email": "notify@versioneye.com",
-    "elasticsearch_product_index": "/product_enterprise",
-    "elasticsearch_user_index": "/user_enterprise",
+    "elasticsearch_product_index": "product_enterprise",
+    "elasticsearch_user_index": "user_enterprise",
     "elasticsearch_addr": "env_ES_PORT_9200_TCP_ADDR",
     "elasticsearch_port": "env_ES_PORT_9200_TCP_PORT",
     "rabbitmq_addr": "env_RM_PORT_5672_TCP_ADDR",
