--- a/config/settings.json
+++ b/config/settings.json
@@ -18,9 +18,9 @@
     "elasticsearch_dep_index": "dependency",
     "elasticsearch_product_index": "product",
     "elasticsearch_user_index": "user",
-    "elasticsearch_addr": "localhost",
+    "elasticsearch_addr": "192.168.118.130",
     "elasticsearch_port": "9200",
-    "rabbitmq_addr": "172.16.22.130",
+    "rabbitmq_addr": "192.168.118.130",
     "rabbitmq_port": "5672",
     "github_base_url": "https://github.com",
     "github_api_url": "https://api.github.com",
@@ -31,7 +31,7 @@
     "projects_unlimited": false,
     "memcache_password": null,
     "memcache_username": null,
-    "memcache_addr": "localhost",
+    "memcache_addr": "192.168.118.130",
     "memcache_port": "11211",
     "s3_infographics_bucket": "veye_dev_infographics",
     "s3_projects_bucket": "veye_dev_projects",
