--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -309,8 +309,8 @@ application_payment.js: application_payment-c366b885e07c2fbaf80dceaa1ef1d5ab.js
 application_payment/index.js: application_payment-c366b885e07c2fbaf80dceaa1ef1d5ab.js
 application_product.js: application_product-83a0fc4d7d608490a56a2ef38591901b.js
 application_product/index.js: application_product-83a0fc4d7d608490a56a2ef38591901b.js
-application_scm.js: application_scm-b9f87cbbecfd3e40c0943f5c5ddc709e.js
-application_scm/index.js: application_scm-b9f87cbbecfd3e40c0943f5c5ddc709e.js
+application_scm.js: application_scm-21fc501206774ae20b0fe93d17b72654.js
+application_scm/index.js: application_scm-21fc501206774ae20b0fe93d17b72654.js
 application_statistics.js: application_statistics-80b3a1affdf7fd9667a411dce0338c11.js
 application_statistics/index.js: application_statistics-80b3a1affdf7fd9667a411dce0338c11.js
 bootstrap.js: bootstrap-724969ef22543d055758dfe0920c36bd.js
@@ -395,10 +395,12 @@ plots_language.js: plots_language-e1e06c4157989a51f90bd4ef0bf8d6af.js
 plots_language/index.js: plots_language-e1e06c4157989a51f90bd4ef0bf8d6af.js
 react.js: react-6e92bf718c1b420aca2d054a33ebb4a7.js
 react/index.js: react-6e92bf718c1b420aca2d054a33ebb4a7.js
-scm/build/repo_files.js: scm/build/repo_files-0f750273f5d8ed5196934c83a6ec9585.js
-scm/build/repo_files/index.js: scm/build/repo_files-0f750273f5d8ed5196934c83a6ec9585.js
-scm/build/repo_list.js: scm/build/repo_list-1f3e57d08cbd2fa93c84d56cd30a5b28.js
-scm/build/repo_list/index.js: scm/build/repo_list-1f3e57d08cbd2fa93c84d56cd30a5b28.js
+scm/build/repo_files.js: scm/build/repo_files-10c939e19b4ed40c702c460f86e815b7.js
+scm/build/repo_files/index.js: scm/build/repo_files-10c939e19b4ed40c702c460f86e815b7.js
+scm/build/repo_list.js: scm/build/repo_list-513c16b329c944d92e5e2cf75eea735e.js
+scm/build/repo_list/index.js: scm/build/repo_list-513c16b329c944d92e5e2cf75eea735e.js
+scm/npm-debug.log: scm/npm-debug-0bf7e9fa4dcc8b265c5458926ccd098e.log
+scm/npm-debug/index.log: scm/npm-debug-0bf7e9fa4dcc8b265c5458926ccd098e.log
 twitter.js: twitter-025d1598f0151ef82ad9b21c14663419.js
 twitter/index.js: twitter-025d1598f0151ef82ad9b21c14663419.js
 application.css: application-22823218caa31e02b8d94ac64fc77c16.css
