--- a/public/assets/sources_manifest.yml
+++ b/public/assets/sources_manifest.yml
@@ -154,7 +154,7 @@ application.js: a6a59a9dba8de5fb74a8e732bc611160
 application_lp.js: d6768778e96c90a952acbdd96ca62583
 application_payment.js: a668709165bf9e4ba50c162216adc8bf
 application_product.js: b3e3525e592cf4d64ce3adbdadc1bae9
-application_scm.js: 98938cf0d7839285ffd96c7e0b887098
+application_scm.js: c4a9d9a89ce33171d9387f1be9419e74
 application_statistics.js: 7b262df81e3d9edfbb1668b3aff0605e
 bootstrap.js: c416da15417afa500b01859454141893
 bootstrap_fileupload.js: a1e0ac7a433b43dc5a376f5a6ddbf334
@@ -197,8 +197,9 @@ plots/timebar.js: 0c27c4d1e59bc9fb96c03bf06f5dc621
 plots/timeline.js: c16dc029aaf4b0e16461ac8bdb74ecad
 plots_language.js: e1e06c4157989a51f90bd4ef0bf8d6af
 react.js: d080bb2be3a1a7467c5ff5f2f51170b3
-scm/build/repo_files.js: bf95fdc6c45fcaac9462b0c6b36a887e
-scm/build/repo_list.js: c92bc7383c22d1b635892d7de59b8047
+scm/build/repo_files.js: 10dc1b786a4aa9cd938d05426c98c28a
+scm/build/repo_list.js: c1f979cccabc256e29c26d9a22250979
+scm/npm-debug.log: 0bf7e9fa4dcc8b265c5458926ccd098e
 twitter.js: 1c80f19b35d4ec5611daa4202f63aa98
 application.css: d42dd530d2daac15ea22ebd356bfd66f
 application_lp.css: ccb2503309e14f358d66837c85dae1e9
