--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -51,10 +51,6 @@ badges/dep_up-to-date.png: badges/dep_up-to-date-af08698d9299fa8ce4cbb6ead7ec6fa
 badges/dep_up-to-date/index.png: badges/dep_up-to-date-af08698d9299fa8ce4cbb6ead7ec6fa9.png
 badges/dep_update.png: badges/dep_update-699340310823c76edc1bfbcadab707b2.png
 badges/dep_update/index.png: badges/dep_update-699340310823c76edc1bfbcadab707b2.png
-bg/2048.jpg: bg/2048-9553ce2ff8d067e1eefa2b8a361246d1.jpg
-bg/2048/index.jpg: bg/2048-9553ce2ff8d067e1eefa2b8a361246d1.jpg
-bg/awesome_berlin_night.jpg: bg/awesome_berlin_night-b6a8217b0773810cd1b6046558c7ae0d.jpg
-bg/awesome_berlin_night/index.jpg: bg/awesome_berlin_night-b6a8217b0773810cd1b6046558c7ae0d.jpg
 c.png: c-583b1b26d14ed2c9d5d1d49c79c6d807.png
 c/index.png: c-583b1b26d14ed2c9d5d1d49c79c6d807.png
 ccs.png: ccs-d5b8bf885952a59cd42f55214ff883b8.png
@@ -183,10 +179,34 @@ lottery/logo3.png: lottery/logo3-ae8378ea7eeba6364ec408e4d0051c92.png
 lottery/logo3/index.png: lottery/logo3-ae8378ea7eeba6364ec408e4d0051c92.png
 lottery/logo4.png: lottery/logo4-41aeb1388175fc059986d3eb76f94bff.png
 lottery/logo4/index.png: lottery/logo4-41aeb1388175fc059986d3eb76f94bff.png
+marketing/VersionEyeEnterpriseArchitecture.png: marketing/VersionEyeEnterpriseArchitecture-a55487484c31fbdd9d4f4415d0bf7315.png
+marketing/VersionEyeEnterpriseArchitecture/index.png: marketing/VersionEyeEnterpriseArchitecture-a55487484c31fbdd9d4f4415d0bf7315.png
+marketing/artifactory.png: marketing/artifactory-cd563bd436d55a042d8e50740b3e8da9.png
+marketing/artifactory/index.png: marketing/artifactory-cd563bd436d55a042d8e50740b3e8da9.png
+marketing/cocoapods.png: marketing/cocoapods-5701227a9fc20f7a1ff1235f397b2ee4.png
+marketing/cocoapods/index.png: marketing/cocoapods-5701227a9fc20f7a1ff1235f397b2ee4.png
 marketing/github_integration.png: marketing/github_integration-c178830b07c90d560b6b115b62df69a6.png
 marketing/github_integration/index.png: marketing/github_integration-c178830b07c90d560b6b115b62df69a6.png
+marketing/github_repository.png: marketing/github_repository-99fb8f98bfc14aae1731a6ddb8f3f25c.png
+marketing/github_repository/index.png: marketing/github_repository-99fb8f98bfc14aae1731a6ddb8f3f25c.png
+marketing/login_with_github.png: marketing/login_with_github-8daeb0464266d0203cff957dd7aa2f5f.png
+marketing/login_with_github/index.png: marketing/login_with_github-8daeb0464266d0203cff957dd7aa2f5f.png
+marketing/login_with_stash.png: marketing/login_with_stash-4621153065d2e9d796e289f1bbe2233b.png
+marketing/login_with_stash/index.png: marketing/login_with_stash-4621153065d2e9d796e289f1bbe2233b.png
+marketing/nexus.png: marketing/nexus-6759e3056800fd8038602d4ee9eb805e.png
+marketing/nexus/index.png: marketing/nexus-6759e3056800fd8038602d4ee9eb805e.png
+marketing/satis.png: marketing/satis-927e3557a2fb51323076d3e2147ed2e0.png
+marketing/satis/index.png: marketing/satis-927e3557a2fb51323076d3e2147ed2e0.png
+marketing/stash_repository.png: marketing/stash_repository-5027bb71dc8293fce1096e742fa27583.png
+marketing/stash_repository/index.png: marketing/stash_repository-5027bb71dc8293fce1096e742fa27583.png
+marketing/versioneye-docker.png: marketing/versioneye-docker-96220f25d1cd2456a596a4d20b80a162.png
+marketing/versioneye-docker/index.png: marketing/versioneye-docker-96220f25d1cd2456a596a4d20b80a162.png
+marketing/versioneye_license_view.png: marketing/versioneye_license_view-3f32887d3782aae4af21f04d4dffc34c.png
+marketing/versioneye_license_view/index.png: marketing/versioneye_license_view-3f32887d3782aae4af21f04d4dffc34c.png
 marketing/versioneye_project.png: marketing/versioneye_project-f77ac06012f915c92516bc9ecdce9355.png
 marketing/versioneye_project/index.png: marketing/versioneye_project-f77ac06012f915c92516bc9ecdce9355.png
+marketing/versioneye_smtp.png: marketing/versioneye_smtp-e57c0259f5ab14e2e8c0e2d2f09c15ff.png
+marketing/versioneye_smtp/index.png: marketing/versioneye_smtp-e57c0259f5ab14e2e8c0e2d2f09c15ff.png
 noise.png: noise-742bfca1dbc874651664ee66553c95e2.png
 noise/index.png: noise-742bfca1dbc874651664ee66553c95e2.png
 profile_icon.png: profile_icon-d21015fdb2bbe43c1a15f78291d09b08.png
@@ -295,6 +315,8 @@ swagger/throbber.gif: swagger/throbber-6f56c2f8c49a162ff4f355ceb218f046.gif
 swagger/throbber/index.gif: swagger/throbber-6f56c2f8c49a162ff4f355ceb218f046.gif
 swagger/wordnik_api.png: swagger/wordnik_api-fb7553a47ca55ead4a6daf0ff52f324e.png
 swagger/wordnik_api/index.png: swagger/wordnik_api-fb7553a47ca55ead4a6daf0ff52f324e.png
+versioneye-round-logo.png: versioneye-round-logo-38b258f66beb63ce36c4ba966f7153f4.png
+versioneye-round-logo/index.png: versioneye-round-logo-38b258f66beb63ce36c4ba966f7153f4.png
 worldmap_sf_b.jpg: worldmap_sf_b-466f729214cbb4d1597b4bfde7dc9cf7.jpg
 worldmap_sf_b/index.jpg: worldmap_sf_b-466f729214cbb4d1597b4bfde7dc9cf7.jpg
 worldmap_sf_ma.jpg: worldmap_sf_ma-286fff9c5796616a122ed8ca7017cbea.jpg
@@ -459,8 +481,8 @@ moowheel/mootools-1.2-more.js: moowheel/mootools-1.2-more-d5893ca278480ea5e2476a
 moowheel/mootools-1/index.2-more.js: moowheel/mootools-1.2-more-d5893ca278480ea5e2476a1d6805b1aa.js
 moowheel/updates.txt: moowheel/updates-f2a5ce3efe62c3c48fa0d0f9c919a0b6.txt
 moowheel/updates/index.txt: moowheel/updates-f2a5ce3efe62c3c48fa0d0f9c919a0b6.txt
-coffee-script.js: coffee-script-f0b69fb8fdd01c21e39912f39244d82c.js
-coffee-script/index.js: coffee-script-f0b69fb8fdd01c21e39912f39244d82c.js
+coffee-script.js: coffee-script-404f6b56ca989f48dd8ba973e090e743.js
+coffee-script/index.js: coffee-script-404f6b56ca989f48dd8ba973e090e743.js
 jquery-ui.js: jquery-ui-fddf1381e26e009190e1f353d75973c3.js
 jquery-ui/index.js: jquery-ui-fddf1381e26e009190e1f353d75973c3.js
 jquery-ui.min.js: jquery-ui.min-2c93efb6662398911c667908eafbfc82.js
