--- a/public/assets/sources_manifest.yml
+++ b/public/assets/sources_manifest.yml
@@ -27,6 +27,8 @@ badges/dep_up-to-date.png: af08698d9299fa8ce4cbb6ead7ec6fa9
 badges/dep_update.png: 699340310823c76edc1bfbcadab707b2
 c.png: 583b1b26d14ed2c9d5d1d49c79c6d807
 ccs.png: d5b8bf885952a59cd42f55214ff883b8
+cites/alexander-greim.jpg: 04b901c2b33cc1ac018daf6aa98a1747
+cites/alexander-greim_75.jpg: c661be6455cf18d644a26987554e3c2e
 eye_off.png: e15e92c710220eaf5494ada5cd03d2c5
 eye_on.png: 8a810e815d0fd8515aeab7f38842cdf1
 follower_icon.png: 71ed890669a4d0dab1978d0d2fd7e3fc
@@ -210,8 +212,8 @@ react.js: abe310a386733893af71cc9eece1d53c
 scm/build/repo_files.js: d6cabeb8be289bb5379e1b64bde281e9
 scm/build/repo_list.js: a784be0f40b86ec41c6c9d1f7688fed6
 twitter.js: 1c80f19b35d4ec5611daa4202f63aa98
-application.css: b6a5bbf57b2eca36dfb5e06925fa806f
-application_lp.css: 62b5d3e692902d59e35ebcb32b38c628
+application.css: a1e2aa87166cd3360c4afb93b32158fe
+application_lp.css: 424491ca6c4b4bbce98123dcc892683b
 font/FontAwesome.otf: 8d818553081ddcd620bfc25611d7aff6
 font/fontawesome-webfont.eot: 2a2685ff3f9577fd6b6b6d2812f2801f
 font/fontawesome-webfont.svg: f10236cb1f3a6badc366fffc428b713c
@@ -240,7 +242,7 @@ moowheel/license.txt: d4a142f137c76bb50992aaa90fc262f5
 moowheel/mootools-1.2-core-nc.js: d400e91df754c6a2faf9c1409cfc7034
 moowheel/mootools-1.2-more.js: 47512090a05495f9304b0db67dc0d462
 moowheel/updates.txt: f2a5ce3efe62c3c48fa0d0f9c919a0b6
-coffee-script.js: 203ea28c737dc5653a85f2fb6c29777a
+coffee-script.js: 03eede35175b501cfa473a843b8d72e1
 jquery-ui.js: 4defaaa8dec405de6f8aee9eb15e6d2e
 jquery-ui.min.js: 5eb5cf94bd5af9e587d96f161081bd99
 jquery.js: 00f85fb35690e5722a734a4973d8a967
