Unique Projects for Enterprise!

--- a/config/settings.json
+++ b/config/settings.json
@@ -29,6 +29,8 @@
     "github_pass": "xxxxxxxx",
     "github_user": "xxxxxxxx",
     "projects_unlimited": false,
+    "projects_unique_ga": false,
+    "projects_unique_scm": false,
     "memcache_password": null,
     "memcache_username": null,
     "memcache_addr": "172.16.172.128",
@@ -96,6 +98,8 @@
     "github_pass": "test_version_12",
     "github_user": "testveye",
     "projects_unlimited": false,
+    "projects_unique_ga": false,
+    "projects_unique_scm": false,
     "memcache_password": null,
     "memcache_username": null,
     "memcache_addr": "172.16.172.128",
@@ -161,6 +165,8 @@
     "github_pass": "env_GITHUB_PASS",
     "github_user": "env_GITHUB_USER",
     "projects_unlimited": false,
+    "projects_unique_ga": false,
+    "projects_unique_scm": false,
     "memcache_username": "env_MEMCACHE_USERNAME",
     "memcache_password": "env_MEMCACHE_PASSWORD",
     "memcache_addr": "env_MC_PORT_11211_TCP_ADDR",
@@ -200,6 +206,8 @@
   "enterprise": {
     "ga_account": "",
     "projects_unlimited": true,
+    "projects_unique_ga": false,
+    "projects_unique_scm": false,
     "mvn_repo_1": "http://192.168.0.19:8081/artifactory",
     "mvn_repo_1_type": "artifactory",
     "mvn_repo_1_user": "admin",
