--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -51,6 +51,8 @@ badges/dep_up-to-date.png: badges/dep_up-to-date-af08698d9299fa8ce4cbb6ead7ec6fa
 badges/dep_up-to-date/index.png: badges/dep_up-to-date-af08698d9299fa8ce4cbb6ead7ec6fa9.png
 badges/dep_update.png: badges/dep_update-699340310823c76edc1bfbcadab707b2.png
 badges/dep_update/index.png: badges/dep_update-699340310823c76edc1bfbcadab707b2.png
+biicode.png: biicode-c4963d199d2d7da48ea094db411d32e4.png
+biicode/index.png: biicode-c4963d199d2d7da48ea094db411d32e4.png
 c.png: c-583b1b26d14ed2c9d5d1d49c79c6d807.png
 c/index.png: c-583b1b26d14ed2c9d5d1d49c79c6d807.png
 ccs.png: ccs-d5b8bf885952a59cd42f55214ff883b8.png
@@ -443,10 +445,10 @@ scm/build/repo_list.js: scm/build/repo_list-7155246664686ac8c8db96c07a03edb8.js
 scm/build/repo_list/index.js: scm/build/repo_list-7155246664686ac8c8db96c07a03edb8.js
 twitter.js: twitter-1887a7df5148ffe030cb05249c9bdaf5.js
 twitter/index.js: twitter-1887a7df5148ffe030cb05249c9bdaf5.js
-application.css: application-8fda51bc36361033093ae1aedf242cbd.css
-application/index.css: application-8fda51bc36361033093ae1aedf242cbd.css
-application_lp.css: application_lp-05d95ed450ab7dab52af41c4f22e3eda.css
-application_lp/index.css: application_lp-05d95ed450ab7dab52af41c4f22e3eda.css
+application.css: application-633e1b68e753383db9fc0cc2e09e4035.css
+application/index.css: application-633e1b68e753383db9fc0cc2e09e4035.css
+application_lp.css: application_lp-28afcc01ba3bdc3233af1bb00195d38e.css
+application_lp/index.css: application_lp-28afcc01ba3bdc3233af1bb00195d38e.css
 font/FontAwesome.otf: font/FontAwesome-8d818553081ddcd620bfc25611d7aff6.otf
 font/FontAwesome/index.otf: font/FontAwesome-8d818553081ddcd620bfc25611d7aff6.otf
 font/fontawesome-webfont.eot: font/fontawesome-webfont-2a2685ff3f9577fd6b6b6d2812f2801f.eot
@@ -503,8 +505,8 @@ moowheel/mootools-1.2-more.js: moowheel/mootools-1.2-more-d5893ca278480ea5e2476a
 moowheel/mootools-1/index.2-more.js: moowheel/mootools-1.2-more-d5893ca278480ea5e2476a1d6805b1aa.js
 moowheel/updates.txt: moowheel/updates-f2a5ce3efe62c3c48fa0d0f9c919a0b6.txt
 moowheel/updates/index.txt: moowheel/updates-f2a5ce3efe62c3c48fa0d0f9c919a0b6.txt
-coffee-script.js: coffee-script-8b6b3ab0585edc089ac4bd74f195560c.js
-coffee-script/index.js: coffee-script-8b6b3ab0585edc089ac4bd74f195560c.js
+coffee-script.js: coffee-script-fe5eccc98139eb591656edeb537c87e3.js
+coffee-script/index.js: coffee-script-fe5eccc98139eb591656edeb537c87e3.js
 jquery-ui.js: jquery-ui-795cc4db47e49f772f4103c909119a90.js
 jquery-ui/index.js: jquery-ui-795cc4db47e49f772f4103c909119a90.js
 jquery-ui.min.js: jquery-ui.min-2c93efb6662398911c667908eafbfc82.js
