--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -75,6 +75,8 @@ icon_114.png: icon_114-64905e9310ce47eac7ba06e12c3f58ca.png
 icon_114/index.png: icon_114-64905e9310ce47eac7ba06e12c3f58ca.png
 integration/github.png: integration/github-2cec00cf7700f6d21b91dd1063f2eb91.png
 integration/github/index.png: integration/github-2cec00cf7700f6d21b91dd1063f2eb91.png
+language/biicode_small.png: language/biicode_small-aea31c8002f09176a4329a1245f8007c.png
+language/biicode_small/index.png: language/biicode_small-aea31c8002f09176a4329a1245f8007c.png
 language/c.png: language/c-41aef16238a052732c81c4db1016ff92.png
 language/c/index.png: language/c-41aef16238a052732c81c4db1016ff92.png
 language/c_bw.png: language/c_bw-b9e4f638956121c07e7af89d1726782b.png
@@ -445,10 +447,10 @@ scm/build/repo_list.js: scm/build/repo_list-7155246664686ac8c8db96c07a03edb8.js
 scm/build/repo_list/index.js: scm/build/repo_list-7155246664686ac8c8db96c07a03edb8.js
 twitter.js: twitter-1887a7df5148ffe030cb05249c9bdaf5.js
 twitter/index.js: twitter-1887a7df5148ffe030cb05249c9bdaf5.js
-application.css: application-633e1b68e753383db9fc0cc2e09e4035.css
-application/index.css: application-633e1b68e753383db9fc0cc2e09e4035.css
-application_lp.css: application_lp-28afcc01ba3bdc3233af1bb00195d38e.css
-application_lp/index.css: application_lp-28afcc01ba3bdc3233af1bb00195d38e.css
+application.css: application-9ade6350532dbd7b0bc15d993ed5f8ba.css
+application/index.css: application-9ade6350532dbd7b0bc15d993ed5f8ba.css
+application_lp.css: application_lp-2e11c1e2d601bc839c8f8dd0b30c3240.css
+application_lp/index.css: application_lp-2e11c1e2d601bc839c8f8dd0b30c3240.css
 font/FontAwesome.otf: font/FontAwesome-8d818553081ddcd620bfc25611d7aff6.otf
 font/FontAwesome/index.otf: font/FontAwesome-8d818553081ddcd620bfc25611d7aff6.otf
 font/fontawesome-webfont.eot: font/fontawesome-webfont-2a2685ff3f9577fd6b6b6d2812f2801f.eot
