Add option to mongodb conf to read from secondary.

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -32,6 +32,8 @@ production:
         - <%= ENV['DB_PORT_27017_TCP_ADDR'] ||= 'localhost' %>:<%= ENV['DB_PORT_27017_TCP_PORT'] ||= '27017' %>
         - <%= ENV['MONGO_RS_2_ADDR'] ||= 'localhost' %>:<%= ENV['MONGO_RS_2_PORT'] ||= '27017' %>
         - <%= ENV['MONGO_RS_3_ADDR'] ||= 'localhost' %>:<%= ENV['MONGO_RS_3_PORT'] ||= '27017' %>
+      options:
+        read: :secondary
 
 enterprise:
   # Configure available database sessions. (required)
